# jankurai

./: .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitleaksignore  .latexmkrc  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  action.yml  agent_talk.md  jankurai-installer.sh  package-lock.json  package.json  rust-toolchain.toml
crates/jankurai/: AGENTS.md  Cargo.toml  README.md
crates/jankurai-guard/: Cargo.toml
crates/jankurai-guard/src/: commit.rs  doctor.rs  layout.rs  lib.rs  policy.rs  state.rs  status.rs  transaction.rs
crates/jankurai-guard/src/audit_client/: mock.rs  mod.rs
crates/jankurai-guard/src/cli/: args.rs  handlers.rs  mod.rs  prompt.rs
crates/jankurai-guard/src/feedback/: banner.rs  mod.rs  report.rs
crates/jankurai-guard/src/fuse/: filesystem.rs  fs_ops.rs  handles.rs  inode.rs  mod.rs  ops_read.rs
crates/jankurai-guard/src/platform/: linux.rs  macos.rs  mod.rs
crates/jankurai-guard/src/poison/: mod.rs  payloads.rs
crates/jankurai-guard/src/pty/: injector.rs  launcher.rs  mod.rs
crates/jankurai-guard/src/watch/: debounce.rs  mod.rs  watcher.rs
crates/jankurai-guard/tests/: denial_formatting.rs  fuse_mount.rs  poison_roundtrip.rs  policy_parsing.rs  transaction_logic.rs  watcher_fallback.rs
crates/jankurai-proofbind/: Cargo.toml
crates/jankurai-proofbind/src/: catalog.rs  classify.rs  lib.rs  receipts.rs  shared.rs  summary.rs  surface_rules.rs
crates/jankurai-proofbind/tests/: proofbind_smoke.rs
crates/jankurai-proofmark/: Cargo.toml
crates/jankurai-proofmark/src/: coverage.rs  engine.rs  lib.rs  render.rs  report.rs  shared.rs
crates/jankurai-proofmark/tests/: proofmark_smoke.rs
crates/jankurai/src/: commands.rs  lib.rs  local_state.rs  main.rs  model.rs  render.rs  score_history.rs  score_history_impl.rs  ui.rs  validation.rs  versions.rs
crates/jankurai/src/audit/: baseline.rs  boundaries_artifact.rs  boundary_reclassification.rs  canonical_standard.rs  caps.rs  ci_local_parity.rs  copy_code.rs  copy_code_cross_check.rs  coverage.rs  evidence.rs  file_kinds.rs  finding_builder.rs  fix_queue.rs  fs.rs  fs_policy.rs  helpers.rs  mod.rs  policy.rs  profile_structure.rs  proofbind_artifact.rs  prose.rs  repo_rot.rs  rule_analyzer.rs  rules.rs  save_gate.rs  scan.rs  security_artifact.rs  smart_scan.rs  source_context.rs  unnecessary_variety.rs  ux_artifact.rs  web_security.rs  worktree_sprawl.rs  zyal.rs
crates/jankurai/src/boundaries/: manifest.rs  mod.rs  python.rs  rust.rs  sql.rs  streaming.rs  typescript.rs
crates/jankurai/src/commands/: adopt.rs  agent.rs  audit_file.rs  badge.rs  bench.rs  cell.rs  cell_catalog.rs  certify.rs  ci.rs  conformance.rs  context_data.rs  context_pack.rs  copy_code.rs  coverage.rs  diff_audit.rs  doctor.rs  exceptions.rs  fleet.rs  gate.rs  govern.rs  history.rs  hooks.rs  init.rs  kickoff.rs  optimize.rs  paper.rs  postmortem.rs  proof.rs  proofbind.rs  proofmark.rs  publish.rs  registry.rs  release_data.rs  repair.rs  repair_apply.rs  repair_git.rs  repair_plan.rs  repair_pr.rs  repair_real.rs  repair_tasks.rs  (+7 more)
crates/jankurai/src/init/: adapters.rs  ci.rs  detect.rs  merge.rs  mod.rs  package_manager.rs  plan.rs  profiles.rs  templates.rs
crates/jankurai/src/report/: github.rs  issues.rs  junit.rs  mod.rs  proof.rs  sarif.rs
crates/jankurai/templates/agent/: badge.toml  (+6 more)
crates/jankurai/tests/: action_metadata_smoke.rs  adoption_ux.rs  audit_enforcement_smoke.rs  audit_file_save_gate.rs  audit_smoke.rs  badge_schema_smoke.rs  baseline_ratchet_smoke.rs  boundaries_audit_ingest_smoke.rs  boundaries_manifest_smoke.rs  command_surface_smoke.rs  comment_hygiene_bad_behavior.rs  conformance_fixture_inventory.rs  conformance_runner.rs  contract_source_smoke.rs  control_map_validation.rs  copy_code_scan.rs  coverage_audit_smoke.rs  diff_audit_smoke.rs  doctor_severity.rs  generated_zones_manifest_smoke.rs  gitlab_ci_smoke.rs  init_doctor.rs  init_golden.rs  language_bad_behavior.rs  migrate_smoke.rs  migration_prompt_verify.rs  migration_safety_audit_smoke.rs  migration_slice_risk.rs  paper_public_repo_scores.rs  phase10_auth_session_cell_smoke.rs  phase10_background_job_cell_smoke.rs  phase10_billing_subscription_cell_smoke.rs  phase10_notification_shell_cell_smoke.rs  phase10_org_team_cell_smoke.rs  phase10_periodic_cron_cell_smoke.rs  phase10_webhook_receiver_cell_smoke.rs  phase_02_rule_contracts.rs  phase_08_09_smoke.rs  phase_11_migration_hardening.rs  phase_12_public_evidence.rs  (+29 more)
crates/tuiwright/: Cargo.toml
crates/tuiwright-cli/: Cargo.toml
crates/tuiwright-cli/src/: main.rs
crates/tuiwright/src/: config.rs  expect.rs  input.rs  lib.rs  locator.rs  record.rs  render.rs  screen.rs  session.rs  trace.rs
crates/tuiwright/tests/: smoke.rs
(+902 files in other folders)
