[package]
name = "jankurai-guard"
version = "0.1.0"
edition = "2021"
description = "Guarded filesystem that audits every agent file write as a single-file jankurai candidate."
license = "MIT"
repository = "https://github.com/neverhuman/jankurai"
homepage = "https://github.com/neverhuman/jankurai"
keywords = ["agent", "audit", "filesystem", "guard", "fuse"]
categories = ["development-tools", "filesystem"]

[features]
# `fuse` is OFF by default and is only meaningful on Linux: the `fuser`
# dependency lives under [target.'cfg(target_os = "linux")'] so enabling this
# feature on macOS (e.g. via `--all-features`) is a no-op and never links macFUSE.
default = []
fuse = ["dep:fuser"]
# Deferred tier-3 hardening features. These are probe-only stubs today; the
# actual implementations ship in a follow-up release.
landlock = []
fanotify = []

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.10"
ignore = "0.4"
notify = "6.1"
portable-pty = "0.9"
crossbeam-channel = "0.5"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies.fuser]
version = "0.14"
optional = true
default-features = false

[dev-dependencies]
tempfile = "3.23"
