[package]
name = "jankurai-proofbind"
version = "0.8.0"
edition = "2021"
description = "Semantic surface routing and proof obligation binding for Jankurai."
license = "MIT"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[dev-dependencies]
tempfile = "3.23"
