[package]
name = "jankurai-proofmark"
version = "0.8.0"
edition = "2021"
description = "Changed-behavior proof receipt engine for Jankurai."
license = "MIT"

[dependencies]
anyhow = "1.0"
jankurai-proofbind = { path = "../jankurai-proofbind", version = "0.8.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.23"
