[package]
name = "jankurai"
version = "1.5.0"
edition = "2021"
description = "Agent-native repository audit CLI and standard."
license = "MIT"
repository = "https://github.com/neverhuman/jankurai"
homepage = "https://github.com/neverhuman/jankurai"
readme = "README.md"
keywords = ["agent", "audit", "cli", "governance", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
aho-corasick = "1.1"
clap = { version = "4.5", features = ["derive"] }
cargo_metadata = "0.19"
globset = "0.4"
ignore = "0.4"
indicatif = "0.17"
jankurai-guard = { path = "../jankurai-guard", version = "0.1.0", default-features = false }
jankurai-proofbind = { path = "../jankurai-proofbind", version = "0.8.0" }
jankurai-proofmark = { path = "../jankurai-proofmark", version = "0.8.0" }
once_cell = "1.21"
rayon = "1.11"
regex = "1.12"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
semver = "1.0"
toml = "0.9"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
walkdir = "2.5"
ureq = { version = "2", default-features = false, features = ["json"] }

[features]
default = []
guard-fuse = ["jankurai-guard/fuse"]

[dev-dependencies]
tempfile = "3.23"
