[package]
name = "tuiwright-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI for Tuiwright TUI testing: screenshots, recordings, traces."
repository = "https://github.com/jeppsontaylor/Jankurai"

[[bin]]
name = "tuiwright"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tuiwright = { path = "../tuiwright" }
