[package]
name = "tuiwright"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Playwright-style black-box testing framework for terminal user interfaces."
repository = "https://github.com/jeppsontaylor/Jankurai"
keywords = ["testing", "terminal", "tui", "playwright", "automation"]
categories = ["development-tools::testing"]

[features]
default = []
web-gif = ["dep:gifski"]

[dependencies]
anyhow = "1"
rusttype = "0.9"
gif = "0.13"
gifski = { version = "1.34", optional = true }
image = { version = "0.25", default-features = false, features = ["png"] }
portable-pty = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
unicode-width = "0.2"
vt100 = "0.16"

[dev-dependencies]
crossterm = "0.29"
tempfile = "3"
